add bg styles for section

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -87,6 +87,11 @@ path, g {
    stroke: inherit;
 }
 
+section {
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+}
 
 .wrapper {
    display: flex;
