add active,focus border none for link

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -66,6 +66,11 @@ a {
    &:hover {
       text-decoration: none;
    }
+
+   &:active, &:focus {
+      border: none;
+      outline: none;
+   }
 }
 
 
