--- a/app/scss/base/vars.scss
+++ b/app/scss/base/vars.scss
@@ -1,4 +1,4 @@
-$default-font: "roboto", "Arial", sans-serif;
+$default-font: "Roboto", "Arial", sans-serif;
 $accent: #E7746F;
 $text: #333;
 $dark: #000;
