--- a/app/scss/base/vars.scss
+++ b/app/scss/base/vars.scss
@@ -1,8 +1,7 @@
 $default-font: "Roboto", "Arial", sans-serif;
 $accent: #E7746F;
-$text: #333;
-$dark: #000;
-$white: #fff;
+$text-light: #fafafa;
+$test-dark: #333;
 $link: #222;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
