change fonts path

--- a/app/scss/base/fonts.scss
+++ b/app/scss/base/fonts.scss
@@ -10,8 +10,8 @@
 
 @font-face {
    font-family:'Roboto';
-   src: url('../../fonts/Roboto Bold.woff2') format('woff2'),
-   url('../../fonts/Roboto Bold.woff') format('woff');
+   src: url('../fonts/Roboto Bold.woff2') format('woff2'),
+   url('../fonts/Roboto Bold.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-stretch: normal;
@@ -20,8 +20,8 @@
 
 @font-face {
    font-family:'Roboto';
-   src: url('../../fonts/Roboto Bold Italic.woff2') format('woff2'),
-   url('../../fonts/Roboto Bold Italic.woff') format('woff');
+   src: url('../fonts/Roboto Bold Italic.woff2') format('woff2'),
+   url('../fonts/Roboto Bold Italic.woff') format('woff');
    font-weight: 700;
    font-style: italic;
    font-stretch: normal;
@@ -30,8 +30,8 @@
 
 @font-face {
    font-family:'Roboto';
-   src: url('../../fonts/Roboto Italic.woff2') format('woff2'),
-   url('../../fonts/Roboto Italic.woff') format('woff');
+   src: url('../fonts/Roboto Italic.woff2') format('woff2'),
+   url('../fonts/Roboto Italic.woff') format('woff');
    font-weight: 400;
    font-style: italic;
    font-stretch: normal;
@@ -40,8 +40,8 @@
 
 @font-face {
    font-family:'Roboto';
-   src: url('../../fonts/Roboto.woff2') format('woff2'),
-   url('../../fonts/Roboto.woff') format('woff');
+   src: url('../fonts/Roboto.woff2') format('woff2'),
+   url('../fonts/Roboto.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-stretch: normal;
