--- a/app/scss/base/fonts.scss
+++ b/app/scss/base/fonts.scss
@@ -9,41 +9,34 @@
 // 900 Black, Heavy
 
 @font-face {
-   font-family:'Roboto';
-   src: url('../fonts/Roboto Bold.woff2') format('woff2'),
-   url('../fonts/Roboto Bold.woff') format('woff');
-   font-weight: 700;
+   font-family: 'Roboto';
+   src: url('../fonts/Roboto-Bold.woff2') format('woff2'),
+   url('../fonts/Roboto-Bold.woff') format('woff');
+   font-weight: bold;
    font-style: normal;
-   font-stretch: normal;
-   unicode-range: U+0020-2044;
 }
 
 @font-face {
-   font-family:'Roboto';
-   src: url('../fonts/Roboto Bold Italic.woff2') format('woff2'),
-   url('../fonts/Roboto Bold Italic.woff') format('woff');
-   font-weight: 700;
+   font-family: 'Roboto';
+   src: url('../fonts/Roboto-Italic.woff2') format('woff2'),
+   url('../fonts/Roboto-Italic.woff') format('woff');
+   font-weight: normal;
    font-style: italic;
-   font-stretch: normal;
-   unicode-range: U+0020-2044;
 }
 
 @font-face {
-   font-family:'Roboto';
-   src: url('../fonts/Roboto Italic.woff2') format('woff2'),
-   url('../fonts/Roboto Italic.woff') format('woff');
-   font-weight: 400;
-   font-style: italic;
-   font-stretch: normal;
-   unicode-range: U+0020-2044;
-}
-
-@font-face {
-   font-family:'Roboto';
-   src: url('../fonts/Roboto.woff2') format('woff2'),
-   url('../fonts/Roboto.woff') format('woff');
-   font-weight: 400;
+   font-family: 'Roboto';
+   src: url('../fonts/Roboto-Regular.woff2') format('woff2'),
+   url('../fonts/Roboto-Regular.woff') format('woff');
+   font-weight: normal;
    font-style: normal;
-   font-stretch: normal;
-   unicode-range: U+0020-2044;
 }
+
+@font-face {
+   font-family: 'Roboto';
+   src: url('../fonts/Roboto-BoldItalic.woff2') format('woff2'),
+   url('../fonts/Roboto-BoldItalic.woff') format('woff');
+   font-weight: bold;
+   font-style: italic;
+}
+
