--- a/app/scss/base/vars.scss
+++ b/app/scss/base/vars.scss
@@ -3,6 +3,7 @@ $accent: #E7746F;
 $text-light: #fafafa;
 $text-dark: #333;
 $link: #222;
+$trs: .25s ease;
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px;
