--- a/app/scss/base/scaffolding.scss
+++ b/app/scss/base/scaffolding.scss
@@ -7,12 +7,15 @@
    color: #fff;
 }
 
+html {
+   font-size: 10px;
+   font-family: $default-font;
+}
 
 body {
    position: relative;
    height: 100%;
    min-width: 320px;
-   font-family: $default-font;
    overflow-x: hidden;
    color: $text-dark;
 
