change default fz

--- a/app/scss/base/scaffolding.scss
+++ b/app/scss/base/scaffolding.scss
@@ -18,6 +18,7 @@ body {
    min-width: 320px;
    overflow-x: hidden;
    color: $text-dark;
+   font-size: 16px;
 
    input, textarea {
       border: #666 1px solid;
