--- a/app/scss/base/scaffolding.scss
+++ b/app/scss/base/scaffolding.scss
@@ -88,7 +88,7 @@ select {
    }
 }
 
-header, section {
+header, section, footer {
    position: relative;
    background-repeat: no-repeat;
    background-position: center;
