add direct path

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,13 @@
 // Import base styles
-@import "base/vars";
-@import "base/fonts";
-@import "base/libs";
-@import "base/scaffolding";
+@import "./base/vars";
+@import "./base/fonts";
+@import "./base/libs";
+@import "./base/scaffolding";
 
 // Import blocks styles
-@import "blocks/common";
-@import "blocks/page-header";
-@import "blocks/page-footer";
+@import "./blocks/common";
+@import "./blocks/page-header";
+@import "./blocks/page-footer";
 
 // ≥1200px
 //@include media-breakpoint-down(lg) {}
